--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,1 +1,18 @@
-/* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
+@import url("navbar.css");
+@import url("search-box.css");
+@import url("login-form.css");
+@import url("content.css");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
+
+* {
+  font-family: Merriweather, serif;
+  padding-left: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.row {
+  background-image: url("/assets/images/login\ background.jpg");
+  background-size: cover;
+  height: 100vh;
+}
