--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,4 @@
 {{page-title "FlightApp"}}
-
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
-
-{{outlet}}
+<div>
+    {{ outlet}}
+</div>
