Added flight list route

--- a/app/components/content.hbs
+++ b/app/components/content.hbs
@@ -8,12 +8,12 @@
 </div> --}}
 </div>
 
-<div class="offersection d-flex p-5 ms-5">
+<div class="offersection d-flex ps-4 pe-5 ms-5">
 {{#each @content as |content|}}
-  <div class="offer-cards m-4">
+  <div class="offer-cards me-4 ms-4">
     <img class="offer-img" src={{content.image}} width="220px" height="150px"/>
     <h6 class="offer">{{content.title}}</h6>
-    <p>{{content.description}}</p>
+    <p class="description">{{content.description}}</p>
   </div>
 {{/each}}
 </div>
