--- a/app/components/navbar.hbs
+++ b/app/components/navbar.hbs
@@ -18,7 +18,7 @@
     <p class="font">TRAINS</p>
   </div>
   <div class="login-btn">
-    <button type="button" class="login-btn btn btn-danger">Login</button>
+    <button type="button" class="login-btn btn btn-danger">Login or Sign-Up</button>
   </div>
 
 </div>
