--- a/app/components/search-box.hbs
+++ b/app/components/search-box.hbs
@@ -57,13 +57,13 @@
             <button
               class="plus-button"
               type="button"
-              {{on "click" this.subtractAdult}}
+              {{on "click" this.subtractChildren}}
             >-</button>
-            <span>{{this.adultCount}}</span>
+            <span>{{this.childrenCount}}</span>
             <button
               class="minus-button"
               type="button"
-              {{on "click" this.addAdult}}
+              {{on "click" this.addChildren}}
             >+</button>
           </div>
         </div>
@@ -75,13 +75,13 @@
             <button
               class="plus-button"
               type="button"
-              {{on "click" this.subtractAdult}}
+              {{on "click" this.subtractInfant}}
             >-</button>
-            <span>{{this.adultCount}}</span>
+            <span>{{this.infantCount}}</span>
             <button
               class="minus-button"
               type="button"
-              {{on "click" this.addAdult}}
+              {{on "click" this.addInfant}}
             >+</button>
           </div>
         </div>
