done flights list

--- a/app/components/flight.hbs
+++ b/app/components/flight.hbs
@@ -1,29 +1,39 @@
+    <div class="flight-detail bg-danger d-flex justify-content-between">
+        <p class="flight-row mt-2 ms-2 "><b>AIRLINES</b> </p>
+        <p class="flight-row mt-2 me-2"><b>DEPARTURE</b></p>
+        <p class="flight-row mt-2 me-3"><b>DURATION</b></p>
+        <p class="flight-row mt-2 me-4"><b>ARRIVE</b></p>
+        <p class="flight-row mt-2 me-5"><b>PRICE</b></p>
+        <p class="flight-row mt-2 me-5"><b>BOOK NOW</b></p>
+    </div>
 <div class="flight">
-    <div class="flight-name d-flex">
-        <img src="/assets/images/indigo.jpg " width="40px" height="40px">
-        <div class="fligt-model">
-            <p>Indigo</p>
-            <p>6E-927</p>
+    <div class="flight-name d-flex justify-content-around row ">
+        <div class="flight-name-wrap col-2 d-flex">
+            <img class="mt-4" src="/assets/images/indigo.jpg " width="40px" height="40px">
+            <div class="fligt-model ms-1 mt-3">
+                <p class=" mb-1">Indigo</p>
+                <p class=" mb-1">6E-927</p>
+            </div>
         </div>
-        <div class="departure-time">
+        <div class="departure-time col-2 mt-3">
             <h5>12:25</h5>
             <p>Chennai</p>
         </div>
-        <div class="time">
-            <p>01h 00m</p>
-            <img src="/assets/images/Screenshot.png">
+        <div class="time col-2 d-block align-item-center mt-1">
+            <p class="mb-1 mt-1">01h 00m</p>
+            <img src="/assets/images/Screenshot.png" width="90px">
             <p>Non-Stop</p>
         </div>
-        <div class="arrive-time">
+        <div class="arrive-time col-2 mt-3">
             <h5>13:25</h5>
             <p>Coimbatore</p>
         </div>
-        <div class="price">
+        <div class="price col-2 mt-2" >
             <h5>4,399</h5>
             <button class="price">+ More Fare</button>
             <p>Get 200 Off with BOOKING NOW</p>
         </div>
-        <div class="book-now-button">
+        <div class="book-now-button col-2 mt-5">
             <button>BOOK NOW</button>
         </div>
     </div>
