--- a/app/templates/flight-list.hbs
+++ b/app/templates/flight-list.hbs
@@ -1,3 +1,12 @@
 {{page-title "FlightList"}}
 <Navbar />
-<Flight />
+<div class="flight-list row">
+    <div class="col-2 ">
+        <Filters />
+        <Stops />
+        <Departure />
+    </div>
+    <div class="col-10">
+        <Flight />
+    </div>
+</div>
